--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.gradle
+/.idea
+/.gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
+/.DS_Store
 /build
 /captures
+/*.iml
