--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+        xmlReport true
+        xmlOutput file("lint-report.xml")
+    }
+
 }
 
 dependencies {
