--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,31 @@ android {
         xmlOutput file("lint-report.xml")
     }
 
+    sonarRunner {
+        sonarProperties {
+            property "sonar.projectKey","com.example.lwaziprusent.slidingmenu"
+            property "sonar.projectName","slidingmenu"
+            property "sonar.projectVersion","1.0"
+
+            property "sonar.host.url", "http://localhost:9000"
+            property "sonar.analysis.mode", "analysis"
+            property "sonar.sourceEncoding", "UTF-8"
+            property "sonar.language", "java"
+
+            property "sonar.sources","src/main/java"
+
+            property "sonar.sourceEncoding","UTF-8"
+        }
+    }
+
+    subprojects {
+        sonarRunner {
+            sonarProperties {
+                properties["sonar.sources"] += "src/main/java"
+            }
+        }
+    }
+
 }
 
 dependencies {
