--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,9 @@ android {
             property "sonar.host.url", "http://localhost:9000"
             property "sonar.analysis.mode", "analysis"
             property "sonar.sourceEncoding", "UTF-8"
-            property "sonar.language", "java"
+            property "sonar.scm.provider","git"
 
-            property "sonar.sources","src/main/java"
+            property "sonar.sources","src/main"
 
             property "sonar.sourceEncoding","UTF-8"
         }
@@ -54,6 +54,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    /*Unit Testing*/
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.9.5"
 
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.android.support:support-v4:22.0.+'
