--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,8 @@ android {
             property "sonar.sourceEncoding", "UTF-8"
             property "sonar.scm.provider","git"
 
-            property "sonar.sources","src/main"
+            property "sonar.sources","src/main/java"
+            property "sonar.tests","src/androidTest/java"
 
             property "sonar.sourceEncoding","UTF-8"
         }
@@ -46,6 +47,7 @@ android {
         sonarRunner {
             sonarProperties {
                 properties["sonar.sources"] += "src/main/java"
+                properties["sonar.tests"] += "src/androidTest/java"
             }
         }
     }
