--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,17 @@ apply plugin: 'com.android.application'
 apply plugin: "sonar-runner"
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.example.lwaziprusent.slidingmenu"
         minSdkVersion 15
-        targetSdkVersion 19
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -39,14 +40,18 @@ android {
 
 
 dependencies {
-    compile project(':libraries:slidingmenu')
+    compile(project(':libraries:slidingmenu')) {
+        transitive = false
+    }
 
     /*Unit Testing*/
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.9.5'
 
-    compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
-    compile 'com.android.support:support-v4:22.0.+'
+    compile ('com.actionbarsherlock:actionbarsherlock:4.4.0@aar')   {
+        exclude module: "com.android.support:appcompat-v7"
+    }
+
 }
 
 sonarRunner {
